--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^16.4.5",
 		"express": "^4.21.1",
+		"express-rate-limit": "^7.4.1",
 		"jsonwebtoken": "^9.0.2",
 		"node-cron": "^3.0.3",
 		"prisma": "^5.21.1",
