--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
 		"express-rate-limit": "^7.4.1",
 		"jsonwebtoken": "^9.0.2",
 		"node-cron": "^3.0.3",
+		"octokit": "^4.0.3",
 		"prisma": "^5.21.1",
 		"resend": "^4.0.0",
 		"resolve-tspaths": "^0.8.22",
