--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"build": "npx tsc && npx resolve-tspaths",
 		"postinstall": "npx prisma generate",
+		"commit": "npx git-cz",
 		"prepare": "husky install"
 	},
 	"repository": {
