--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,10 +26,10 @@
 		// "moduleDetection": "auto",                        /* Control what method is used to detect module-format JS files. */
 
 		/* Modules */
-		"module": "NodeNext",
+		"module": "Node16",
 		/* Specify what module code is generated. */
 		// "rootDir": "./",                                  /* Specify the root folder within your source files. */
-		"moduleResolution": "NodeNext",
+		"moduleResolution": "Node16",
 		/* Specify how TypeScript looks up a file from a given module specifier. */
 		"baseUrl": "./",
 		/* Specify the base directory to resolve non-relative module names. */
@@ -86,7 +86,7 @@
 
 		/* Interop Constraints */
 		// "isolatedModules": true,                          /* Ensure that each file can be safely transpiled without relying on other imports. */
-		// "verbatimModuleSyntax": true,                     /* Do not transform or elide any imports or exports not marked as type-only, ensuring they are written in the output file's format based on the 'module' setting. */
+		"verbatimModuleSyntax": false /* Do not transform or elide any imports or exports not marked as type-only, ensuring they are written in the output file's format based on the 'module' setting. */,
 		// "allowSyntheticDefaultImports": true,             /* Allow 'import x from y' when a module doesn't have a default export. */
 		"esModuleInterop": true,
 		/* Emit additional JavaScript to ease support for importing CommonJS modules. This enables 'allowSyntheticDefaultImports' for type compatibility. */
