--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,4 +3,5 @@ updates:
   - package-ecosystem: "npm" # Type of dependencies (npm, pip, bundler, etc.)
     directory: "/"           # Directory where the dependencies file is located
     schedule:
-      interval: "weekly"    # How often to check for updates (daily, weekly, monthly
+      interval: "weekly"    # How often to check for updates (daily, weekly, monthly)
+    target-branch: "staging" # Specify the branch name here
