--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
 		"@aws-sdk/client-s3": "^3.675.0",
 		"@aws-sdk/client-sqs": "^3.723.0",
 		"@aws-sdk/s3-request-presigner": "^3.675.0",
+		"@langchain/community": "^0.3.26",
+		"@langchain/core": "^0.3.32",
+		"@langchain/openai": "^0.3.17",
 		"@paralleldrive/cuid2": "^2.2.2",
 		"@prisma/client": "^6.2.0",
 		"bcryptjs": "^2.4.3",
@@ -36,6 +39,7 @@
 		"express": "^4.21.1",
 		"express-rate-limit": "^7.4.1",
 		"jsonwebtoken": "^9.0.2",
+		"langchain": "^0.3.12",
 		"neo4j-driver": "^5.27.0",
 		"node-cron": "^3.0.3",
 		"octokit": "^4.0.3",
